--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@react-spring/three": "^9.7.3",
-    "@react-three/drei": "9.80.1",
+    "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "8.13.4",
     "@types/three": "^0.174.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "0.150.1"
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
